Fix af bug... tak Oliver