@@ -6,7 +6,10 @@ Clone this repository to a local directory.
 
 `git clone https://github.com/Mikkel-Github/1semesterprojekt`
 
-Open the cloned repository in your Java IDE and everything should be working out of the box.
+Open the cloned repository in your Java IDE. You might need to add your JavaFX lib to the project:
+File --> Project Structure --> Libraries --> + --> Java --> navigate to: ...\JavaFXSDK15\javafx-sdk-15.0.1\lib
+
+Run --> Edit Configurations --> VM Option insert: --module-path "...\JavaFXSDK15\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml
 
 # Authors
 * Granit Imishti
